--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -61,6 +61,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    column-gap: 10px;
     padding-top: 50px;
     padding-bottom: 50px;
     font-weight: 100;
@@ -74,7 +75,7 @@
   }
 
   &__bottom--school {
-    @media (max-width: 600px){
+    @media (max-width: 650px){
        display: none; 
     }
   }
@@ -87,11 +88,19 @@
   line-height: 1;
   letter-spacing: 0.09em;
   &__list {
-    display: flex;
-    column-gap: 150px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    justify-content: space-between;
+    column-gap: 16px;
+    grid-row-gap: 25px;
+    @media (max-width: 1029px){
+    }
+    @media (max-width: 980px) {
+    }
     @media (max-width: 650px){
-      column-gap: 20px;
-      justify-content: space-around; 
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(2, 1fr);
     }
   }
 
@@ -99,9 +108,6 @@
   }
 
   &__item {
-    &:not(:last-child) {
-      margin-bottom: 25px;
-    }
   }
 
   &__link {
