--- a/src/styles/blocks/_hero.scss
+++ b/src/styles/blocks/_hero.scss
@@ -7,7 +7,7 @@
   padding-bottom: 0;
   &__container {
       position: relative;
-      padding: 0;
+      //padding: 0;
   }
 
   &__content {
@@ -18,9 +18,29 @@
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
+      @media (max-width: 1024px) {
+        top: 50px;
+      }
+      @media (max-width: 768px) {
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 100%;
+        text-align: center;
+      }
   }
   &__images {
       margin-left: 30.6%;
+      @media (max-width: em(1024)){
+         margin-left: 29%; 
+      }
+      @media (max-width: em(768)){
+        margin-left: 0;
+        padding-top: 215px;
+      }
+      @media (max-width: em(450)){
+        padding-top: 150px;
+      }
   }
 
   &__header-block {
@@ -43,7 +63,7 @@
     @media (max-width: em(1024)){
         font-size: 24px; 
     }
-    @media (max-width: em(767.98)){
+    @media (max-width: em(768)){
         font-size: 20px;
     }
     @media (max-width: em(450)){
@@ -52,9 +72,13 @@
   }
 
   &__action {
+    @media (max-width: em(768)){
+      display: none;
+    }
   }
 
   &__btn {
+    
   }
 }
 .slider-welcome {
@@ -64,6 +88,12 @@
     max-width: 1000px;
     padding-bottom: 55px;
     overflow: hidden;
+    @media (max-width: em(1024)){
+       padding-bottom: 120px; 
+    }
+    @media (max-width: em(768)){
+       padding-bottom: 96px; 
+    }
   }
 
   &__wrapper {
@@ -71,6 +101,15 @@
 
   &__slide {
     position: relative;
+    @media (max-width: em(1024)){
+      height: 465px;
+      overflow: hidden;
+    }
+    @media (max-width: em(768)){
+      height: auto;
+      overflow: initial;
+    }
+
     &::after{
       content:'';
       position: absolute;
@@ -79,6 +118,9 @@
       width: 100%;
       height: 100%;
       background: linear-gradient(90deg, #030303 0%, rgba(0, 0, 0, 0.5) 16.19%, rgba(0, 0, 0, 0) 30.73%);
+      @media (max-width: em(768)){
+         display: none; 
+      }
     }
   }
 
@@ -91,19 +133,39 @@
     height: 120px;
     padding: 40px 74px;
     display: flex;
-    flex-wrap: wrap;
+    //flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     column-gap: 15px;
     background-color: var(--c-bg-body-dark);
+    @media (max-width: em(1024)){
+      left: 0;
+      width: 100%;
+      padding: 40px 74px 40px 220px;
+    }
+    @media (max-width: em(768)){
+      height: 100px;
+      justify-content: center;
+      column-gap: 40px;
+      padding: 10px;
+    }
+    @media (max-width: em(450)){
+      height: 80px; 
+    }
   }
 
   &__counter {
     font-weight: 400;
     font-size: 22px;
-    line-height: 1.81818;
+    line-height: 1.8;
     text-transform: uppercase;
     color: #fff;
+    @media (max-width: em(768)){
+       font-size: 20px; 
+    }
+    @media (max-width: em(450)){
+       font-size: 16px; 
+    }
   }
 
   &__dots {
@@ -119,12 +181,18 @@
     width: 30px;
     height: 8px;
     cursor: pointer;
+    @media (max-width: em(450)){
+      width: 20px;        
+    }
   }
 
   &__next {
     width: 30px;
     height: 8px;
     cursor: pointer;
+    @media (max-width: em(450)){
+      width: 20px;        
+    }
 
   }
 }
@@ -139,6 +207,9 @@
 	align-items: center;
 	gap: 20px;
 	cursor: pointer;
+  @media (max-width: em(450)){
+    gap: 10px;
+  }
 }
 
 .swiper-pagination-bullet,
@@ -150,6 +221,14 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+  @media (max-width: em(1024)){
+    width: 12px;
+    height: 12px;
+  }
+  @media (max-width: em(450)){
+    width: 7px;
+    height: 7px;  
+  }
 }
 
 .swiper-pagination-bullet-active,
@@ -160,12 +239,6 @@
 .swiper-button-disabled {
   opacity: 0.6;
 }
-
-
-
-
-
-
 @media (max-width: 1024px){
 }
 @media (max-width: 767.98px){
@@ -185,3 +258,4 @@
 }
 .swiper-button-next {
 }
+
