--- a/src/styles/blocks/_booking.scss
+++ b/src/styles/blocks/_booking.scss
@@ -4,19 +4,31 @@
 .booking {
   color: var(--c-dark);
   &__wrapper {
-    width: 970px;
+    max-width: 970px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     gap: 20px;
+    @media (max-width: em(930.98)){
+      flex-direction: column;
+    }
   }
 
   &__main {
     width: 41%;
     flex: 0 1 41%;
+    @media (max-width: em(930.98)) {
+      width: 100%;
+      flex: 0 1 100%;
+    }
   }
   &__overwiev {
     width: 54%;
     flex: 0 1 54%;
+    @media (max-width: em(930.98)) {
+      width: 100%;
+      flex: 0 1 100%;
+    }
   }
 
   &__header-block {
@@ -33,12 +45,13 @@
   &__title {
     font-family: var(--ff-secondary);
     font-weight: 400;
-    font-size: 50px;
+    
     text-transform: uppercase;
     color: #9d8665;
     &:not(:last-child) {
       margin-bottom: 16px;
     }
+    @include adaptive-clamp("font-size", 50, 25);
   }
 
   &__subtitle {
@@ -56,10 +69,18 @@
 .overwiev {
   border: 1px solid #000;
   padding: 25px 30px;
+  @media (max-width: em(500)){
+      padding: 12px 12px;
+  }
 
   &__top {
     display: flex;
     justify-content: space-between;
+    @media (max-width: em(525)){
+       flex-direction: column;
+       gap: 10px; 
+       margin-bottom: 16px;
+    }
   }
 
   &__content {
@@ -96,16 +117,28 @@
   &__date {
     display: flex;
     gap: 15px;
+    img {
+      width: 25px;
+      flex-shrink: 0;
+    }
   }
 
   &__time {
     display: flex;
     gap: 15px;
+    img {
+      width: 25px;
+      flex-shrink: 0;
+    }
   }
 
   &__type-ticket {
     display: flex;
     gap: 15px;
+    img {
+      width: 25px;
+      flex-shrink: 0;
+    }
   }
 
   &__images {
@@ -140,6 +173,9 @@
 }
 
 .form-booking {
+  img {
+    flex-shrink: 0;
+  }
   display: flex;
   flex-direction: column;
   row-gap: 20px;
@@ -151,6 +187,10 @@
     border: 1px solid var(--c-dark);
     font-size: 18px;
     color: var(--c-dark);
+    @media (max-width: em(500)) {
+      width: 100%;
+      padding: 0 5px 0 35px;
+    }
     &::placeholder {
       font-size: 18px;
       color: var(--c-dark);
@@ -165,34 +205,44 @@
   }
 
   &__date {
-    width: 190px;
+    width: 47%;
+    input {
+      @media (max-width: em(500)) {
+        padding: 0 0px 0 5px;
+      }
+    }
   }
 
   &__time {
-    width: 190px;
+    width: 47%;
+    input {
+      @media (max-width: em(500)) {
+        padding: 0 0px 0 5px;
+      }
+    }
   }
 
   &__name {
     input {
-      background: url('../assets/svg/form/name.svg') no-repeat left 15px center;
+      background: url('../assets/svg/form/name.svg') no-repeat left 12px center;
     }
   }
 
   &__email {
     input {
-      background: url('../assets/svg/form/email.svg') no-repeat left 15px center;
+      background: url('../assets/svg/form/email.svg') no-repeat left 12px center;
     }
   }
 
   &__phone {
     input {
-      background: url('../assets/svg/form/phone.svg') no-repeat left 15px center;
+      background: url('../assets/svg/form/phone.svg') no-repeat left 12px center;
     }
   }
 
   &__select {
     select {
-      background: url('../assets/svg/form/type-ticket.svg') no-repeat left 15px center;
+      background: url('../assets/svg/form/type-ticket.svg') no-repeat left 12px center;
     }
   }
 
@@ -287,6 +337,10 @@
     padding: 15px 20px;
     border-radius: 3px;
     max-width: 360px;
+    @media (max-width: em(500)){
+      max-width: 100%; 
+      padding: 8px 12px; 
+    }
 
     img {
       position: absolute;
@@ -327,6 +381,9 @@
     top: 30px;
     right: 0;
     width: 360px;
+    @media (max-width: em(500)){
+      display: none;
+    }
   }
 
   &__wrapper {
